test/scc_test/exp/semantic-errors/029.a
029.t:4:12: error: incomplete type is not allowed